syntax = "proto3";

package fluence.contract.protobuf;

import "protobuf.proto";

service ContractAllocator {
    rpc offer (BasicContract) returns (BasicContract);
    rpc allocate (BasicContract) returns (BasicContract);
}

service ContractsCache {
    rpc find (FindRequest) returns (BasicContract);
    rpc cache (BasicContract) returns (CacheResponse);
}